// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons As a link 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <Styled(Component)
            asLink={true}
            href="/"
          >
            <ForwardRef
              asLink={true}
              className="sc-AykKK fmyQGk"
              disabled={false}
              fullWidth={false}
              href="/"
              icon={null}
              iconSide="right"
              size="medium"
            >
              <Button__WrapperButton
                as="a"
                className="sc-AykKK fmyQGk"
                disabled={false}
                fullWidth={false}
                href="/"
                size="medium"
              >
                <a
                  className="Button__WrapperButton-sc-1omxup2-0 kpKTNa sc-AykKK fmyQGk"
                  disabled={false}
                  href="/"
                  size="medium"
                >
                  Create project
                </a>
              </Button__WrapperButton>
            </ForwardRef>
          </Styled(Component)>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Buttons Button 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <ForwardRef
            asLink={false}
            disabled={false}
            fullWidth={false}
            icon={null}
            iconSide="right"
            size="medium"
          >
            <Button__WrapperButton
              disabled={false}
              fullWidth={false}
              size="medium"
            >
              <button
                className="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
                disabled={false}
                size="medium"
              >
                Create project
              </button>
            </Button__WrapperButton>
          </ForwardRef>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Buttons DangerButton 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <Styled(Component)>
            <ForwardRef
              asLink={false}
              className="sc-fzXfLO fTPgxe"
              disabled={false}
              fullWidth={false}
              icon={null}
              iconSide="right"
              size="medium"
            >
              <Button__WrapperButton
                className="sc-fzXfLO fTPgxe"
                disabled={false}
                fullWidth={false}
                size="medium"
              >
                <button
                  className="Button__WrapperButton-sc-1omxup2-0 kpKTNa sc-fzXfLO fTPgxe"
                  disabled={false}
                  size="medium"
                >
                  Delete project
                </button>
              </Button__WrapperButton>
            </ForwardRef>
          </Styled(Component)>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Buttons PrimaryButton 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <Styled(Component)>
            <ForwardRef
              asLink={false}
              className="sc-AykKK fmyQGk"
              disabled={false}
              fullWidth={false}
              icon={null}
              iconSide="right"
              size="medium"
            >
              <Button__WrapperButton
                className="sc-AykKK fmyQGk"
                disabled={false}
                fullWidth={false}
                size="medium"
              >
                <button
                  className="Button__WrapperButton-sc-1omxup2-0 kpKTNa sc-AykKK fmyQGk"
                  disabled={false}
                  size="medium"
                >
                  Create project
                </button>
              </Button__WrapperButton>
            </ForwardRef>
          </Styled(Component)>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Buttons QuietButton 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <Styled(Component)>
            <ForwardRef
              asLink={false}
              className="sc-fzXfLP eLLQgR"
              disabled={false}
              fullWidth={false}
              icon={null}
              iconSide="right"
              size="medium"
            >
              <Button__WrapperButton
                className="sc-fzXfLP eLLQgR"
                disabled={false}
                fullWidth={false}
                size="medium"
              >
                <button
                  className="Button__WrapperButton-sc-1omxup2-0 kpKTNa sc-fzXfLP eLLQgR"
                  disabled={false}
                  size="medium"
                >
                  Create project
                </button>
              </Button__WrapperButton>
            </ForwardRef>
          </Styled(Component)>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Buttons Set to disabled 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <Styled(Component)
            disabled={true}
          >
            <ForwardRef
              asLink={false}
              className="sc-AykKK dmJkIW"
              disabled={true}
              fullWidth={false}
              icon={null}
              iconSide="right"
              size="medium"
            >
              <Button__WrapperButton
                className="sc-AykKK dmJkIW"
                disabled={true}
                fullWidth={false}
                size="medium"
              >
                <button
                  className="Button__WrapperButton-sc-1omxup2-0 hOMAfu sc-AykKK dmJkIW"
                  disabled={true}
                  size="medium"
                >
                  Create project
                </button>
              </Button__WrapperButton>
            </ForwardRef>
          </Styled(Component)>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Buttons Set to full width 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <Styled(Component)
            fullWidth={true}
          >
            <ForwardRef
              asLink={false}
              className="sc-AykKK fmyQGk"
              disabled={false}
              fullWidth={true}
              icon={null}
              iconSide="right"
              size="medium"
            >
              <Button__WrapperButton
                className="sc-AykKK fmyQGk"
                disabled={false}
                fullWidth={true}
                size="medium"
              >
                <button
                  className="Button__WrapperButton-sc-1omxup2-0 gDovmz sc-AykKK fmyQGk"
                  disabled={false}
                  size="medium"
                >
                  Create project
                </button>
              </Button__WrapperButton>
            </ForwardRef>
          </Styled(Component)>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Buttons With a selected Icon 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <ForwardRef
            asLink={false}
            disabled={false}
            fullWidth={false}
            icon="add"
            iconSide="left"
            size="medium"
          >
            <Button__WrapperButton
              disabled={false}
              fullWidth={false}
              size="medium"
            >
              <button
                className="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
                disabled={false}
                size="medium"
              >
                <Styled(Component)
                  color="currentColor"
                  icon="add"
                  mr="half"
                  size="1.14285714em"
                  title={null}
                >
                  <ForwardRef
                    className="sc-AykKD hZefax"
                    color="currentColor"
                    focusable={false}
                    icon="add"
                    mr="half"
                    size="1.14285714em"
                    title={null}
                  >
                    <svg
                      aria-hidden={true}
                      className="sc-AykKD hZefax"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="1.14285714em"
                      icon="add"
                      mr="half"
                      size="1.14285714em"
                      title={null}
                      viewBox="0 0 24 24"
                      width="1.14285714em"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        key="0"
                      />
                    </svg>
                  </ForwardRef>
                </Styled(Component)>
                Create project
              </button>
            </Button__WrapperButton>
          </ForwardRef>
          <ForwardRef
            asLink={false}
            disabled={false}
            fullWidth={false}
            icon="add"
            iconSide="right"
            size="medium"
          >
            <Button__WrapperButton
              disabled={false}
              fullWidth={false}
              size="medium"
            >
              <button
                className="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
                disabled={false}
                size="medium"
              >
                Create project
                <Styled(Component)
                  color="currentColor"
                  icon="add"
                  ml="half"
                  size="1.14285714em"
                  title={null}
                >
                  <ForwardRef
                    className="sc-AykKD jZBXwS"
                    color="currentColor"
                    focusable={false}
                    icon="add"
                    ml="half"
                    size="1.14285714em"
                    title={null}
                  >
                    <svg
                      aria-hidden={true}
                      className="sc-AykKD jZBXwS"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="1.14285714em"
                      icon="add"
                      ml="half"
                      size="1.14285714em"
                      title={null}
                      viewBox="0 0 24 24"
                      width="1.14285714em"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        key="0"
                      />
                    </svg>
                  </ForwardRef>
                </Styled(Component)>
              </button>
            </Button__WrapperButton>
          </ForwardRef>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Buttons With a selected size 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <ForwardRef
            asLink={false}
            disabled={false}
            fullWidth={false}
            icon={null}
            iconSide="right"
            size="small"
          >
            <Button__WrapperButton
              disabled={false}
              fullWidth={false}
              size="small"
            >
              <button
                className="Button__WrapperButton-sc-1omxup2-0 doZlSP"
                disabled={false}
                size="small"
              >
                Create project
              </button>
            </Button__WrapperButton>
          </ForwardRef>
          <ForwardRef
            asLink={false}
            disabled={false}
            fullWidth={false}
            icon={null}
            iconSide="right"
            size="medium"
          >
            <Button__WrapperButton
              disabled={false}
              fullWidth={false}
              size="medium"
            >
              <button
                className="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
                disabled={false}
                size="medium"
              >
                Create project
              </button>
            </Button__WrapperButton>
          </ForwardRef>
          <ForwardRef
            asLink={false}
            disabled={false}
            fullWidth={false}
            icon={null}
            iconSide="right"
            size="large"
          >
            <Button__WrapperButton
              disabled={false}
              fullWidth={false}
              size="large"
            >
              <button
                className="Button__WrapperButton-sc-1omxup2-0 hlItJn"
                disabled={false}
                size="large"
              >
                Create project
              </button>
            </Button__WrapperButton>
          </ForwardRef>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;
